--- a/ads_config.json
+++ b/ads_config.json
@@ -2,25 +2,27 @@
   "ads": {
     "id_app": "id_app",
     "flury_id": "flury_id",
-    "banner_setting": "ca-app-pub-/2672936624",
-    "inter_setting": "ca-app-pub-/",
-    "banner_main": "ca-app-pub-/9343593663",
-    "inter_main": "ca-app-pub-/8999920608",
+    "banner_setting": "ca-app-pub-5315325291235997/1324177382",
+    "inter_setting": "ca-app-pub-5315325291235997/4109288677",
+    "banner_main": "ca-app-pub-5315325291235997/9011095713",
+    "inter_main": "ca-app-pub-5315325291235997/7698014049",
     "banner_setting_new": "",
     "inter_setting_new": "",
     "banner_main_new": "",
     "inter_main_new": "",
-    "onlyAdmod": true,
-    "onlyFB": false,
-    "fb_banner": "",
-    "fb_inter": ""
+    "onlyAdmod": false,
+    "onlyFB": true,
+    "fb_banner": "513928026683030_513928210016345",
+    "fb_inter": "513928026683030_513928416682991",
+    "fb_banner_main":"513928026683030_513928500016316",
+    "fb_inter_main":"513928026683030_513928580016308"
   },
   "app_exists": {
     "id": "com.king.candycrushsaga",
     "is_exists": true,
     "is_show_more": true,
     "isLoading": false,
-    "isShowAds": false,
+    "isShowAds": true,
     "onlyAdsMe": false,
     "isShowInApp":true,
     "bg": "https://play-lh.googleusercontent.com/8gaz8rbPJ7hCtl-kU1mQwm04-awVv5TDSJjEfmEKRDp1hipKn2nlRmLKEmSDib7uqCk=w1440-h620-rw"
