--- a/ads_config.json
+++ b/ads_config.json
@@ -18,8 +18,8 @@
     "fb_inter_main":"513928026683030_513928580016308"
   },
   "app_exists": {
-    "id": "com.king.candycrushsaga",
-    "is_exists": true,
+    "id": "com.gfx.gfxtool.gfxpro",
+    "is_exists": false,
     "is_show_more": true,
     "isLoading": false,
     "isShowAds": true,
